// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package google.cql.proto;

option java_multiple_files = true;
option go_package = "github.com/google/cql/protos/cql_types_go_proto";

message CQLType {
  oneof type {
    SystemType system_type = 1;
    NamedType named_type = 2;
    IntervalType interval_type = 3;
    ListType list_type = 4;
    ChoiceType choice_type = 5;
    TupleType tuple_type = 6;
  }
}

message SystemType {
  optional Type type = 1;
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_ANY = 1;
    TYPE_STRING = 2;
    TYPE_BOOLEAN = 3;
    TYPE_INTEGER = 4;
    TYPE_LONG = 5;
    TYPE_DECIMAL = 6;
    TYPE_QUANTITY = 7;
    TYPE_RATIO = 8;
    TYPE_DATE = 9;
    TYPE_DATE_TIME = 10;
    TYPE_TIME = 11;
    TYPE_VALUE_SET = 12;
    TYPE_CODE_SYSTEM = 13;
    TYPE_VOCABULARY = 14;
    TYPE_CODE = 15;
    TYPE_CONCEPT = 16;
  }
}

message NamedType {
  // The fully qualified name of the type such as FHIR.EnrollmentResponseStatus
  // or System.Integer.
  optional string type_name = 1;
}

message IntervalType {
  optional CQLType point_type = 1;
}

message ListType {
  optional CQLType element_type = 1;
}

message ChoiceType {
  repeated CQLType choice_types = 1;
}

message TupleType {
  // Maps the element name to the type of the element.
  map<string, CQLType> element_types = 1;
}
